<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rumi.rumicafe.MainActivity">
    <item
        android:id="@+id/action_aboutUs"
        android:orderInCategory="5"
        android:title="@string/about_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_order"
        android:orderInCategory="1"
        android:title="@string/orders"
        app:showAsAction="always"
        android:icon="@drawable/ic_add_shopping_cart"/>

    <item
        android:id="@+id/action_status"
        android:orderInCategory="3"
        android:title="@string/status"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_info_black_24dp"/>

    <item
        android:id="@+id/action_call"
        android:orderInCategory="2"
        android:title="@string/call_us"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_call_us"/>

    <item
        android:id="@+id/action_locate"
        android:orderInCategory="4"
        android:title="@string/locate_us"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_locate_us"/>




</menu>
