<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/text_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/droid_deserts"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

         />
    <TextView
        android:id="@+id/choose_desert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_desert"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/text_intro"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

    <ImageView
        android:id="@+id/doughnut"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:src="@drawable/doughnut"
        app:layout_constraintTop_toBottomOf="@id/choose_desert"
        android:contentDescription="@string/doughnuts_are_glazed_and_sprinkled_with_candy"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="showdoughnutMessage"
        />

    <TextView
        android:id="@+id/text_doughnut"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/doughnuts_are_glazed_and_sprinkled_with_candy"
        android:textStyle="italic"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/choose_desert"
        app:layout_constraintBottom_toBottomOf="@id/doughnut"
        app:layout_constraintLeft_toRightOf="@id/doughnut"
        />

    <ImageView
        android:id="@+id/icecream"
        android:layout_width="130dp"
        android:layout_height="180dp"
        android:src="@drawable/icecream"
        app:layout_constraintTop_toBottomOf="@id/doughnut"
        android:contentDescription="@string/ice_sandwiches_have_a_variety_of_flavours_with_sprinkles_on_top"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="showiceCreamMessage"
        />

    <TextView
        android:id="@+id/text_icecream"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/ice_sandwiches_have_a_variety_of_flavours_with_sprinkles_on_top"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/text_doughnut"
        app:layout_constraintBottom_toBottomOf="@id/icecream"
        app:layout_constraintLeft_toRightOf="@id/icecream"
        />

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="130dp"
        android:layout_height="180dp"
        android:src="@drawable/froyo"
        app:layout_constraintTop_toBottomOf="@id/icecream"
        android:contentDescription="@string/froyo_is_a_premium_self_served_frozen_yoghurt"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="showfroyoMessage"
        />

    <TextView
        android:id="@+id/text_froyo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/froyo_is_a_premium_self_served_frozen_yoghurt"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/text_icecream"
        app:layout_constraintBottom_toBottomOf="@id/froyo"
        app:layout_constraintLeft_toRightOf="@id/froyo"
        />


</androidx.constraintlayout.widget.ConstraintLayout>